--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-MONGODB_URI="mongodb+srv://Alvin2:Alvin2.0@cluster0.qcuar6o.mongodb.net/hunterjobs?retryWrites=true&w=majority&appName=Cluster0";
+MONGODB_URI=mongodb+srv://Alvin2:Alvin2.0@cluster0.qcuar6o.mongodb.net/sample_mflix?retryWrites=true&w=majority
 PORT=5000
-
